[gd_scene load_steps=3 format=3 uid="uid://c2rfa635qx6oh"]

[ext_resource type="Script" path="res://main.gd" id="1_71kjs"]
[ext_resource type="PackedScene" uid="uid://c426tfqdauj0b" path="res://die.tscn" id="2_aq27u"]

[node name="Main" type="Node2D"]
script = ExtResource("1_71kjs")
die_scene = ExtResource("2_aq27u")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 640.0

[node name="RollDiceButton" type="Button" parent="."]
offset_left = 384.0
offset_top = 320.0
offset_right = 768.0
offset_bottom = 384.0
text = "Roll Dice"

[node name="AddDiceButton" type="Button" parent="."]
offset_left = 520.0
offset_top = 392.0
offset_right = 648.0
offset_bottom = 455.0
text = "Add Dice"

[node name="RemoveDiceButton" type="Button" parent="."]
offset_left = 384.0
offset_top = 392.0
offset_right = 512.0
offset_bottom = 456.0
text = "Remove"

[node name="RollTotal" type="Label" parent="."]
offset_left = 512.0
offset_top = 192.0
offset_right = 640.0
offset_bottom = 256.0
text = "Total: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiceSelect" type="OptionButton" parent="."]
offset_left = 656.0
offset_top = 392.0
offset_right = 768.0
offset_bottom = 456.0
item_count = 6
popup/item_0/text = "d4"
popup/item_0/id = 4
popup/item_1/text = "d6"
popup/item_1/id = 6
popup/item_2/text = "d8"
popup/item_2/id = 8
popup/item_3/text = "d10"
popup/item_3/id = 10
popup/item_4/text = "d12"
popup/item_4/id = 12
popup/item_5/text = "d20"
popup/item_5/id = 20

[node name="drag" type="Label" parent="."]
offset_left = 512.0
offset_top = 160.0
offset_right = 640.0
offset_bottom = 191.0

[connection signal="pressed" from="RollDiceButton" to="." method="_on_roll_dice_button_pressed"]
[connection signal="pressed" from="AddDiceButton" to="." method="_on_add_die_pressed"]
[connection signal="pressed" from="RemoveDiceButton" to="." method="_on_remove_dice_button_pressed"]
